<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout_add_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Sujet de la réunion" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/DateHeureDebut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:inputType="datetime"
            android:hint="Heure de début"
...
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:drawableStart="@drawable/ic_baseline_access_time_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SujetBox"
            app:layout_constraintBottom_toTopOf="@id/DateHeureFin" />

        <EditText
            android:id="@+id/DateHeureFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
...
