...
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/meeting_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_delete_button" />

    <TextView
        android:id="@+id/meeting_participants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
...
